--- a/src/global.css
+++ b/src/global.css
@@ -10,62 +10,67 @@ body {
   --font-poppins: Poppins;
 
   /* font sizes */
-  --font-size-xl: 20px;
-  --font-size-5xl: 24px;
-  --font-size-13xl: 32px;
-  --font-size-6xl-3: 25.3px;
-  --font-size-16xl-3: 35.3px;
-  --font-size-21xl: 40px;
-  --font-size-17xl: 36px;
-  --font-size-lg-7: 18.7px;
-  --font-size-23xl-7: 42.7px;
   --font-size-10xl: 29px;
   --font-size-17xl-2: 36.2px;
-  --font-size-base-1: 16.1px;
-  --font-size-sm-4: 13.4px;
-  --font-size-6xl: 25px;
+  --font-size-21xl: 40px;
+  --font-size-6xl-3: 25.3px;
+  --font-size-9xl: 28px;
+  --font-size-13xl: 32px;
+  --font-size-16xl-3: 35.3px;
+  --font-size-lg-7: 18.7px;
+  --font-size-23xl-7: 42.7px;
   --font-size-7xl-7: 26.7px;
   --font-size-2xl-3: 21.3px;
   --font-size-61xl: 80px;
+  --font-size-xl: 20px;
+  --font-size-5xl: 24px;
+  --font-size-17xl: 36px;
   --font-size-4xl-7: 23.7px;
   --font-size-base: 16px;
+  --font-size-base-1: 16.1px;
+  --font-size-sm-4: 13.4px;
+  --font-size-6xl: 25px;
 
   /* Colors */
   --color-whitesmoke-100: #f2f2f2;
   --color-whitesmoke-200: #ededed;
+  --color-darkorange: #ff8f28;
+  --color-gainsboro: #d9d9d9;
+  --color-gray-200: #8d8d8d;
+  --color-gray-100: #8b8b8b;
+  --color-gray-300: #7a7a7a;
+  --color-gray-400: #787878;
+  --color-gray-500: #262626;
+  --color-gray: #1e1e1e;
+  --color-darkslategray-800: #4b4a4a;
   --color-darkslategray-300: #474747;
   --color-darkslategray-100: #464646;
   --color-darkslategray-400: #464545;
   --color-darkslategray-500: #444;
   --color-darkslategray-200: #434343;
+  --color-darkslategray-900: #35424a;
   --color-darkslategray-600: #3c3c3c;
   --color-darkslategray-700: #3b3b3b;
   --color-darkslategray: #343434;
-  --color-gray-200: #8d8d8d;
-  --color-gray-100: #8b8b8b;
-  --color-gray-300: #7a7a7a;
-  --color-gray-400: #787878;
-  --color-gray: #1e1e1e;
+  --color-darkslategray-1000: #323232;
   --color-white: #fff;
-  --color-darkorange: #ff8f28;
+  --color-black: #000;
   --color-dimgray-300: #727272;
   --color-dimgray-100: #707070;
   --color-dimgray-200: #626262;
   --color-dimgray: #5b5656;
   --color-dimgray-400: #575757;
   --color-dimgray-500: #4f4f4f;
-  --color-gainsboro: #d9d9d9;
-  --color-black: #000;
   --color-limegreen: #49d418;
 
   /* border radiuses */
-  --br-8xs: 5px;
-  --br-10xs-5: 2.5px;
+  --br-3xs: 10px;
   --br-xl: 20px;
   --br-47xl-7: 66.7px;
-  --br-3xs: 10px;
-  --br-mid-9: 17.9px;
-  --br-25xl-7: 44.7px;
   --br-sm-3: 13.3px;
+  --br-8xs: 5px;
+  --br-10xs-5: 2.5px;
+  --br-25xl-7: 44.7px;
+  --br-mid-9: 17.9px;
   --br-21xl: 40px;
 }
