--- a/src/pages/Modal.css
+++ b/src/pages/Modal.css
@@ -1,4 +1,4 @@
-.fluentbox-24-filled7 {
+.fluentbox-24-filled6 {
   position: absolute;
   top: 660px;
   left: 44px;
@@ -6,7 +6,7 @@
   height: 24px;
   overflow: hidden;
 }
-.footer7,
+.footer6,
 .group-child36 {
   position: absolute;
   top: 3875.33px;
@@ -35,7 +35,7 @@
 .image-14-parent {
   top: 156px;
 }
-.vecteezy-restaurant-logo-food-icon16 {
+.vecteezy-restaurant-logo-food-icon13 {
   position: absolute;
   top: -156px;
   left: 107px;
@@ -44,7 +44,7 @@
   height: 132px;
   object-fit: cover;
 }
-.header-child9 {
+.header-child8 {
   position: absolute;
   top: 0;
   left: 0;
@@ -53,39 +53,39 @@
   width: 1920px;
   height: 156px;
 }
-.cardpio7,
-.home7 {
+.cardpio5,
+.home6 {
   position: absolute;
   top: 48px;
   left: 904px;
   display: inline-block;
   width: 126.67px;
 }
-.cardpio7 {
+.cardpio5 {
   left: 1089.33px;
   width: 213.33px;
 }
-.header-child10,
-.rea-do-cliente6 {
+.header-child9,
+.rea-do-cliente5 {
   position: absolute;
   top: 30.67px;
   left: 1468px;
   width: 414.67px;
   height: 93.33px;
 }
-.header-child10 {
+.header-child9 {
   border-radius: 66.67px;
   background-color: var(--color-white);
 }
-.rea-do-cliente6 {
+.rea-do-cliente5 {
   font-weight: 500;
   color: var(--color-gray);
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.vecteezy-restaurant-logo-food-icon17,
-.vector-icon37 {
+.vecteezy-restaurant-logo-food-icon14,
+.vector-icon18 {
   position: absolute;
   height: 69.23%;
   width: 4.44%;
@@ -97,7 +97,7 @@
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon37 {
+.vector-icon18 {
   height: 30.77%;
   width: 2.5%;
   top: 35.04%;
@@ -106,12 +106,12 @@
   left: 70.9%;
 }
 .group-child37,
-.header6 {
+.header5 {
   position: absolute;
   left: 0;
   width: 1920px;
 }
-.header6 {
+.header5 {
   top: 0;
   height: 156px;
   text-align: center;
@@ -122,20 +122,20 @@
   background-color: var(--color-white);
   height: 112px;
 }
-.fastgrill-idp3,
-.sgan-609-mdulo2 {
+.fastgrill-idp2,
+.sgan-609-mdulo1 {
   position: absolute;
   top: 263px;
   left: 266px;
   display: inline-block;
   width: 769.33px;
 }
-.sgan-609-mdulo2 {
+.sgan-609-mdulo1 {
   top: 311px;
   width: 901px;
 }
-.pedidos-na-sua-container1,
-.tempo-mdio-de-container1 {
+.pedidos-na-sua-container,
+.tempo-mdio-de-container {
   position: absolute;
   top: 530px;
   left: 192px;
@@ -143,11 +143,11 @@
   display: inline-block;
   width: 494px;
 }
-.tempo-mdio-de-container1 {
+.tempo-mdio-de-container {
   left: 816px;
   width: 593px;
 }
-.aberto-at-as2 {
+.aberto-at-as1 {
   position: absolute;
   top: 356px;
   left: 292px;
@@ -173,22 +173,22 @@
   width: 289px;
   height: 61px;
 }
-.ver-outras-unidades1 {
+.ver-outras-unidades {
   position: absolute;
   top: 15px;
   left: 63px;
   display: inline-block;
   width: 211px;
 }
-.rectangle-parent23,
-.vector-icon38 {
+.rectangle-parent20,
+.vector-icon19 {
   position: absolute;
   top: 0;
   left: 0;
   width: 289px;
   height: 61px;
 }
-.vector-icon38 {
+.vector-icon19 {
   height: 53.02%;
   width: 12.8%;
   top: 26.49%;
@@ -199,7 +199,7 @@
   overflow: hidden;
   max-height: 100%;
 }
-.group-parent3 {
+.group-parent2 {
   position: absolute;
   top: 295px;
   left: 1594px;
@@ -207,8 +207,8 @@
   height: 61px;
   font-size: var(--font-size-xl);
 }
-.categorias1,
-.sucos-tapioca1 {
+.categorias,
+.sucos-tapioca {
   position: absolute;
   top: 0;
   left: 0;
@@ -216,27 +216,27 @@
   align-items: center;
   width: 1724px;
 }
-.sucos-tapioca1 {
+.sucos-tapioca {
   top: 52px;
   font-size: var(--font-size-5xl);
   color: var(--color-dimgray-200);
   height: 51px;
 }
-.group-frame,
-.group-wrapper {
+.categorias-parent,
+.group-frame {
   position: absolute;
   top: 0;
   left: 0;
   width: 1724px;
   height: 103px;
 }
-.group-wrapper {
+.group-frame {
   top: 660px;
   left: 107px;
   color: var(--color-darkslategray-200);
 }
 .group-child40,
-.image-11-icon8 {
+.image-11-icon {
   position: absolute;
   border-radius: 17.88px;
 }
@@ -249,38 +249,39 @@
   width: 561.56px;
   height: 262px;
 }
-.image-11-icon8 {
+.image-11-icon {
   top: 87.93px;
   left: 379.35px;
   width: 174.37px;
   height: 174.37px;
   object-fit: cover;
 }
-.peito-de-frango24 {
+.peito-de-frango {
   position: absolute;
   top: 87.93px;
   left: 18.1px;
   font-size: 25.04px;
   font-weight: 600;
 }
-.pratos-executivos1 {
+.esse-t-no,
+.pratos-executivos {
   position: absolute;
+  text-align: left;
+}
+.pratos-executivos {
   top: 0;
   left: 2px;
   font-size: var(--font-size-13xl);
   color: var(--color-darkslategray-200);
-  text-align: left;
 }
-.esse-t-no24 {
-  position: absolute;
+.esse-t-no {
   top: 128.17px;
   left: 18.1px;
   color: var(--color-gray-100);
-  text-align: left;
   display: inline-block;
   width: 330.85px;
 }
-.adicionar-ao-carrinho24,
+.adicionar-ao-carrinho,
 .group-child41 {
   position: absolute;
   top: 262.3px;
@@ -292,7 +293,7 @@
   border-radius: 44.71px;
   background-color: var(--color-darkorange);
 }
-.adicionar-ao-carrinho24 {
+.adicionar-ao-carrinho {
   font-size: 13.41px;
   font-weight: 600;
   color: var(--color-white);
@@ -300,17 +301,17 @@
   align-items: center;
   justify-content: center;
 }
-.span24 {
+.span {
   color: var(--color-gray-100);
 }
-.r-199025 {
+.r-19901 {
   color: var(--color-darkslategray-100);
 }
-.a-partir-de-container49 {
+.a-partir-de-container1 {
   line-break: anywhere;
   width: 100%;
 }
-.a-partir-de-container48 {
+.a-partir-de-container {
   position: absolute;
   top: 270.35px;
   left: 379.35px;
@@ -321,7 +322,7 @@
   color: var(--color-dimgray-100);
 }
 .group-child42,
-.image-12-icon15 {
+.image-12-icon {
   position: absolute;
   border-radius: 17.88px;
 }
@@ -334,60 +335,62 @@
   width: 561.56px;
   height: 262px;
 }
-.image-12-icon15 {
+.image-12-icon {
   top: 25.93px;
   left: 377.35px;
   width: 174.37px;
   height: 174.37px;
   object-fit: cover;
 }
-.peito-de-frango25 {
-  position: absolute;
+.peito-de-frango1 {
   top: 25.93px;
-  left: 16.1px;
   font-size: 25.04px;
   font-weight: 600;
 }
-.esse-t-no25 {
+.esse-t-no1,
+.group-child43,
+.peito-de-frango1 {
   position: absolute;
-  top: 66.17px;
   left: 16.1px;
+}
+.esse-t-no1 {
+  top: 66.17px;
   color: var(--color-gray-100);
   text-align: left;
   display: inline-block;
   width: 330.85px;
 }
-.adicionar-ao-carrinho25,
 .group-child43 {
-  position: absolute;
   top: 200.3px;
-  left: 16.1px;
+  border-radius: 44.71px;
+  background-color: var(--color-darkorange);
   width: 317.44px;
   height: 50.97px;
 }
-.group-child43 {
-  border-radius: 44.71px;
-  background-color: var(--color-darkorange);
+.a-partir-de-container2,
+.adicionar-ao-carrinho1 {
+  position: absolute;
+  display: flex;
+  align-items: center;
 }
-.adicionar-ao-carrinho25 {
+.adicionar-ao-carrinho1 {
+  top: 200.3px;
+  left: 16.1px;
   font-size: 13.41px;
   font-weight: 600;
   color: var(--color-white);
-  display: flex;
-  align-items: center;
   justify-content: center;
+  width: 317.44px;
+  height: 50.97px;
 }
-.a-partir-de-container50 {
-  position: absolute;
+.a-partir-de-container2 {
   top: 208.35px;
   left: 377.35px;
-  display: flex;
-  align-items: center;
   width: 174.37px;
   height: 34.87px;
   color: var(--color-dimgray-100);
 }
-.rectangle-parent25 {
+.rectangle-parent22 {
   position: absolute;
   top: 62px;
   left: 583.23px;
@@ -395,7 +398,7 @@
   height: 262px;
 }
 .group-child44,
-.image-11-icon9 {
+.image-11-icon1 {
   position: absolute;
   border-radius: 17.88px;
 }
@@ -408,21 +411,21 @@
   width: 561.56px;
   height: 262px;
 }
-.image-11-icon9 {
+.image-11-icon1 {
   top: 1178.93px;
   left: 482.35px;
   width: 174.37px;
   height: 174.37px;
   object-fit: cover;
 }
-.peito-de-frango26 {
+.peito-de-frango2 {
   position: absolute;
   top: 368.93px;
   left: 16.1px;
   font-size: 25.04px;
   font-weight: 600;
 }
-.esse-t-no26 {
+.esse-t-no2 {
   position: absolute;
   top: 409.17px;
   left: 16.1px;
@@ -431,7 +434,7 @@
   display: inline-block;
   width: 330.85px;
 }
-.adicionar-ao-carrinho26,
+.adicionar-ao-carrinho2,
 .group-child45 {
   position: absolute;
   top: 543.3px;
@@ -443,7 +446,7 @@
   border-radius: 44.71px;
   background-color: var(--color-darkorange);
 }
-.adicionar-ao-carrinho26 {
+.adicionar-ao-carrinho2 {
   font-size: 13.41px;
   font-weight: 600;
   color: var(--color-white);
@@ -451,46 +454,46 @@
   align-items: center;
   justify-content: center;
 }
-.a-partir-de-container52 {
+.a-partir-de-container4 {
   top: 551.35px;
   display: flex;
   align-items: center;
   height: 34.87px;
   color: var(--color-dimgray-100);
 }
-.a-partir-de-container52,
-.a-partir-de-container54,
-.image-12-icon16 {
+.a-partir-de-container4,
+.a-partir-de-container6,
+.image-12-icon1 {
   position: absolute;
   left: 377.35px;
   width: 174.37px;
 }
-.image-12-icon16 {
+.image-12-icon1 {
   top: 23.93px;
   border-radius: 17.88px;
   height: 174.37px;
   object-fit: cover;
 }
-.a-partir-de-container54 {
+.a-partir-de-container6 {
   top: 206.35px;
   display: flex;
   align-items: center;
   height: 34.87px;
   color: var(--color-dimgray-100);
 }
-.rectangle-parent26,
-.rectangle-parent27 {
+.rectangle-parent23,
+.rectangle-parent24 {
   position: absolute;
   top: 343px;
   left: 581.23px;
   width: 561.56px;
   height: 262px;
 }
-.rectangle-parent27 {
+.rectangle-parent24 {
   top: 62px;
   left: 1164.46px;
 }
-.rectangle-parent24 {
+.rectangle-parent21 {
   position: absolute;
   top: 1227px;
   left: 105px;
@@ -500,8 +503,8 @@
   font-size: var(--font-size-base-1);
   color: var(--color-black);
 }
-.vector-icon39,
-.vector-icon40 {
+.vector-icon20,
+.vector-icon21 {
   position: absolute;
   height: 1.43%;
   width: 3.33%;
@@ -513,7 +516,7 @@
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon40 {
+.vector-icon21 {
   height: 1.34%;
   width: 3.02%;
   top: 12.32%;
@@ -521,8 +524,8 @@
   bottom: 86.34%;
   left: 38.39%;
 }
-.group-icon4,
-.solarstar-bold-duotone7 {
+.group-icon3,
+.solarstar-bold-duotone6 {
   position: absolute;
   top: 254.85px;
   left: 1724.01px;
@@ -530,7 +533,7 @@
   height: 24px;
   overflow: hidden;
 }
-.group-icon4 {
+.group-icon3 {
   height: 10.06%;
   width: 2.23%;
   top: 0;
@@ -540,7 +543,7 @@
   max-width: 100%;
   max-height: 100%;
 }
-.os-pratos-que1 {
+.os-pratos-que {
   position: absolute;
   top: 53.85px;
   left: 0;
@@ -549,7 +552,7 @@
   width: 1724px;
   height: 51px;
 }
-.recomendaes-dirias1 {
+.recomendaes-dirias {
   position: absolute;
   top: 0;
   left: 0;
@@ -568,7 +571,7 @@
   width: 561.56px;
   height: 262px;
 }
-.esse-t-no29 {
+.esse-t-no5 {
   position: absolute;
   top: 66.17px;
   left: 16.1px;
@@ -576,7 +579,7 @@
   display: inline-block;
   width: 330.85px;
 }
-.adicionar-ao-carrinho29,
+.adicionar-ao-carrinho5,
 .group-child51 {
   position: absolute;
   top: 200.3px;
@@ -588,7 +591,7 @@
   border-radius: 44.71px;
   background-color: var(--color-white);
 }
-.adicionar-ao-carrinho29 {
+.adicionar-ao-carrinho5 {
   font-size: 13.41px;
   font-weight: 600;
   color: var(--color-darkorange);
@@ -596,10 +599,10 @@
   align-items: center;
   justify-content: center;
 }
-.r-199030 {
+.r-19906 {
   color: var(--color-white);
 }
-.a-partir-de-container58 {
+.a-partir-de-container10 {
   position: absolute;
   top: 208.35px;
   left: 377.35px;
@@ -609,23 +612,23 @@
   height: 34.87px;
   color: var(--color-whitesmoke-200);
 }
-.rectangle-parent28,
-.rectangle-parent29,
-.rectangle-parent30 {
+.rectangle-parent25,
+.rectangle-parent26,
+.rectangle-parent27 {
   position: absolute;
   top: 112px;
   left: 2px;
   width: 561.56px;
   height: 262px;
 }
-.rectangle-parent29,
-.rectangle-parent30 {
+.rectangle-parent26,
+.rectangle-parent27 {
   left: 583.23px;
 }
-.rectangle-parent30 {
+.rectangle-parent27 {
   left: 1164.46px;
 }
-.recomendaes-dirias-group {
+.recomendaes-dirias-parent {
   position: absolute;
   top: 5.85px;
   left: 0;
@@ -635,7 +638,7 @@
   font-size: var(--font-size-base-1);
   color: var(--color-white);
 }
-.solarstar-bold-duotone-group {
+.solarstar-bold-duotone-parent {
   position: absolute;
   top: 802.15px;
   left: 109px;
@@ -691,7 +694,7 @@
   height: 122px;
 }
 .image-14-icon1,
-.peito-de-frango32 {
+.peito-de-frango8 {
   position: absolute;
   left: 694px;
   width: 341px;
@@ -702,7 +705,7 @@
   height: 341px;
   object-fit: cover;
 }
-.peito-de-frango32 {
+.peito-de-frango8 {
   top: 386px;
   font-size: 33.18px;
   font-weight: 600;
@@ -733,80 +736,162 @@
   top: 0;
   left: 0;
   font-size: var(--font-size-5xl);
+  display: flex;
+  align-items: center;
+  width: 590px;
   color: var(--color-black);
 }
-.feijo-preto-arroz {
+.feijo-preto-arroz,
+.feijo-preto1 {
   position: absolute;
-  top: 25px;
   left: 36px;
+  display: flex;
+  align-items: center;
+}
+.feijo-preto1 {
+  top: 0;
+  font-weight: 600;
+  width: 133px;
+}
+.feijo-preto-arroz {
+  top: 25px;
   font-size: var(--font-size-base);
   color: var(--color-gray-400);
+  width: 292px;
 }
-.ellipse-formcontrollabel,
+.feijo-preto-parent,
 .group-child60 {
   position: absolute;
   top: 6px;
   left: 0;
 }
-.group-child60 {
-  top: 11px;
-  left: 5px;
-  border-radius: 50%;
-  background-color: var(--color-darkslategray-500);
-  width: 14px;
-  height: 14px;
-}
 .feijo-preto-parent {
-  position: absolute;
   top: 48px;
-  left: 0;
-  width: 297px;
+  width: 328px;
   height: 49px;
 }
-.feijo-tropeiro {
+.feijo-tropeiro,
+.feijo-tropeiro-arroz {
   position: absolute;
-  top: 0;
   left: 36px;
+  display: flex;
+  align-items: center;
+}
+.feijo-tropeiro {
+  top: 0;
   font-weight: 600;
+  width: 167px;
+}
+.feijo-tropeiro-arroz {
+  top: 25px;
+  font-size: var(--font-size-base);
+  color: var(--color-gray-400);
+  width: 313px;
 }
 .feijo-tropeiro-parent {
   position: absolute;
   top: 112px;
   left: 0;
-  width: 317px;
+  width: 349px;
   height: 49px;
 }
 .adicione-um-acompanhamento-ob-parent {
   position: absolute;
   top: 40px;
   left: 34px;
-  width: 553px;
+  width: 590px;
   height: 161px;
+}
+.escolha-o-ponto-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: var(--font-size-5xl);
+  display: flex;
+  align-items: center;
+  width: 537px;
+  color: var(--color-black);
+}
+.mal-passado,
+.selado-por-fora {
+  position: absolute;
+  left: 36px;
+  display: flex;
+  align-items: center;
+}
+.mal-passado {
+  top: 0;
+  font-weight: 600;
+  width: 149px;
+}
+.selado-por-fora {
+  top: 25px;
+  font-size: var(--font-size-base);
+  color: var(--color-gray-400);
+  width: 326px;
 }
 .mal-passado-parent {
   position: absolute;
   top: 48px;
   left: 0;
-  width: 323px;
+  width: 362px;
   height: 49px;
 }
-.ao-ponto-parent,
-.bem-passado-parent {
+.ao-ponto1,
+.selado-por-fora1 {
+  position: absolute;
+  left: 36px;
+  display: flex;
+  align-items: center;
+}
+.ao-ponto1 {
+  top: 0;
+  font-weight: 600;
+  width: 113px;
+}
+.selado-por-fora1 {
+  top: 25px;
+  font-size: var(--font-size-base);
+  color: var(--color-gray-400);
+  width: 368px;
+}
+.ao-ponto-parent {
   position: absolute;
   top: 112px;
   left: 0;
-  width: 335px;
+  width: 404px;
   height: 49px;
 }
+.bem-passado,
+.selado-por-fora2 {
+  position: absolute;
+  left: 36px;
+  display: flex;
+  align-items: center;
+}
+.bem-passado {
+  top: 0;
+  font-weight: 600;
+  width: 173px;
+}
+.selado-por-fora2 {
+  top: 25px;
+  font-size: var(--font-size-base);
+  color: var(--color-gray-400);
+  width: 336px;
+}
 .bem-passado-parent {
+  position: absolute;
   top: 173px;
-  width: 308px;
+  left: 0;
+  width: 372px;
+  height: 49px;
 }
 .escolha-o-ponto-da-protena-o-parent {
   position: absolute;
   top: 222px;
   left: 34px;
-  width: 503px;
+  width: 537px;
   height: 222px;
 }
 .deseja-adicionar-acompanhament-container {
@@ -815,6 +900,9 @@
   left: 0;
   font-size: var(--font-size-5xl);
   text-align: left;
+  display: flex;
+  align-items: center;
+  width: 622px;
   color: var(--color-black);
 }
 .div28,
@@ -828,25 +916,31 @@
   left: 113px;
   font-weight: 600;
   text-align: left;
+  display: flex;
+  align-items: center;
+  width: 271px;
 }
 .div28,
 .r {
   left: 39px;
 }
 .r {
-  left: 514px;
+  left: 460px;
   color: var(--color-black);
   text-align: right;
+  display: flex;
+  align-items: center;
+  width: 143px;
 }
-.group-child66 {
+.group-child65 {
   position: absolute;
   left: 0;
   border-radius: 50%;
   background-color: var(--color-darkslategray-500);
 }
 .div29,
-.group-child66,
-.group-child67 {
+.group-child65,
+.group-child66 {
   top: 3px;
   width: 24px;
   height: 24px;
@@ -859,14 +953,14 @@
   align-items: center;
   justify-content: center;
 }
-.group-child67 {
+.group-child66 {
   left: 68px;
   border-radius: 50%;
   background-color: var(--color-darkslategray-500);
 }
 .div30,
 .div31,
-.group-child67 {
+.group-child66 {
   position: absolute;
 }
 .div30 {
@@ -885,15 +979,15 @@
   font-size: var(--font-size-4xl-7);
   color: var(--color-darkslategray-300);
 }
-.group-child68 {
+.group-child67 {
   left: 0;
   border-radius: 50%;
   background-color: var(--color-darkslategray-500);
 }
 .div32,
 .div33,
-.group-child68,
-.group-child69 {
+.group-child67,
+.group-child68 {
   position: absolute;
   top: 254.55px;
   width: 28.43px;
@@ -908,10 +1002,10 @@
   justify-content: center;
 }
 .div33,
-.group-child69 {
+.group-child68 {
   left: 80.57px;
 }
-.group-child69 {
+.group-child68 {
   border-radius: 50%;
   background-color: var(--color-darkslategray-500);
 }
@@ -922,7 +1016,7 @@
   align-items: center;
   justify-content: center;
 }
-.group-wrapper1,
+.group-wrapper2,
 .poro-de-mandioca-parent {
   position: absolute;
   top: 0;
@@ -930,7 +1024,7 @@
   width: 603px;
   height: 287px;
 }
-.group-wrapper1 {
+.group-wrapper2 {
   top: 51px;
   color: var(--color-white);
 }
@@ -940,6 +1034,9 @@
   left: 113px;
   font-weight: 600;
   text-align: left;
+  display: flex;
+  align-items: center;
+  width: 191px;
 }
 .div34,
 .div35,
@@ -963,7 +1060,6 @@
 .div36 {
   left: 68px;
 }
-.group-wrapper2,
 .group-wrapper3,
 .poro-de-ovo-parent {
   position: absolute;
@@ -972,20 +1068,43 @@
   width: 603px;
   height: 30px;
 }
-.group-wrapper2,
 .group-wrapper3 {
   top: 103px;
 }
-.group-wrapper3 {
+.poro-de-arroz {
+  position: absolute;
+  top: 0;
+  left: 113px;
+  font-weight: 600;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  width: 206px;
+}
+.group-wrapper4 {
+  position: absolute;
   top: 155px;
+  left: 0;
+  width: 603px;
+  height: 30px;
+}
+.poro-de-salada {
+  position: absolute;
+  top: 0;
+  left: 113px;
+  font-weight: 600;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  width: 231px;
 }
 .div40,
-.group-wrapper4 {
+.group-wrapper5 {
   position: absolute;
   top: 0;
   left: 42px;
 }
-.group-wrapper4 {
+.group-wrapper5 {
   top: 207px;
   left: 0;
   width: 603px;
@@ -995,31 +1114,39 @@
   position: absolute;
   top: 465px;
   left: 34px;
-  width: 603px;
+  width: 622px;
   height: 338px;
   text-align: center;
 }
-.adicionar-r,
-.group-child76 {
-  position: absolute;
-  top: 749px;
-  left: 238px;
-  width: 399px;
-  height: 64px;
-}
-.group-child76 {
+.group-child75 {
+  top: 0;
+  left: 0;
   border-radius: 44.71px;
   background-color: var(--color-darkorange);
 }
+.adicionar-r,
+.group-child75,
+.rectangle-parent29 {
+  position: absolute;
+  width: 399px;
+  height: 64px;
+}
 .adicionar-r {
+  top: 0;
+  left: 0;
   font-weight: 600;
-  color: var(--color-white);
-  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.rectangle-parent31 {
+.rectangle-parent29 {
+  top: 749px;
+  left: 238px;
+  cursor: pointer;
+  text-align: center;
+  color: var(--color-white);
+}
+.rectangle-parent28 {
   position: absolute;
   top: 143px;
   left: 433px;
