--- a/src/pages/PagamentoConferir.css
+++ b/src/pages/PagamentoConferir.css
@@ -6,7 +6,7 @@
   height: 256px;
   overflow: hidden;
 }
-.fluentbox-24-filled3,
+.fluentbox-24-filled4,
 .heroiconspencil-solid3,
 .material-symbolsstore3,
 .mdicalendar3 {
@@ -17,32 +17,32 @@
   height: 24px;
   overflow: hidden;
 }
-.fluentbox-24-filled3,
+.fluentbox-24-filled4,
 .material-symbolsstore3,
 .mdicalendar3 {
   left: 24px;
 }
-.fluentbox-24-filled3,
+.fluentbox-24-filled4,
 .mdicalendar3 {
   left: 0;
 }
-.fluentbox-24-filled3 {
+.fluentbox-24-filled4 {
   top: 660px;
   left: 44px;
 }
-.footer3,
-.group-child19 {
+.footer4,
+.group-child24 {
   position: absolute;
   top: 3875.33px;
   left: 0;
   width: 1920px;
   height: 369.33px;
 }
-.group-child19 {
+.group-child24 {
   top: 0;
   background-color: var(--color-darkorange);
 }
-.vecteezy-restaurant-logo-food-icon6 {
+.vecteezy-restaurant-logo-food-icon8 {
   position: absolute;
   height: 46.57%;
   width: 6.81%;
@@ -54,17 +54,17 @@
   overflow: hidden;
   max-height: 100%;
 }
-.fast-grill-3,
-.todos-os-direitos3 {
+.fast-grill-4,
+.todos-os-direitos4 {
   position: absolute;
   top: 242.67px;
   left: 789.33px;
 }
-.todos-os-direitos3 {
+.todos-os-direitos4 {
   top: 306.67px;
   font-size: 18.67px;
 }
-.rectangle-parent10 {
+.rectangle-parent14 {
   position: absolute;
   top: 1654px;
   left: 0;
@@ -81,7 +81,7 @@
   height: 24px;
   overflow: hidden;
 }
-.header-child4 {
+.header-child6 {
   position: absolute;
   top: 0;
   left: 0;
@@ -90,8 +90,8 @@
   width: 1920px;
   height: 156px;
 }
-.cardpio3,
-.home3 {
+.cardpio4,
+.home5 {
   position: absolute;
   top: 48px;
   left: 904px;
@@ -99,31 +99,31 @@
   width: 126.67px;
   cursor: pointer;
 }
-.cardpio3 {
+.cardpio4 {
   left: 1089.33px;
   width: 213.33px;
 }
-.header-child5,
-.rea-do-cliente3 {
+.header-child7,
+.rea-do-cliente4 {
   position: absolute;
   top: 30.67px;
   left: 1468px;
   width: 414.67px;
   height: 93.33px;
 }
-.header-child5 {
+.header-child7 {
   border-radius: 66.67px;
   background-color: var(--color-white);
 }
-.rea-do-cliente3 {
+.rea-do-cliente4 {
   font-weight: 500;
   color: var(--color-gray);
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.vecteezy-restaurant-logo-food-icon7,
-.vector-icon24 {
+.vecteezy-restaurant-logo-food-icon9,
+.vector-icon10 {
   position: absolute;
   height: 69.23%;
   width: 4.44%;
@@ -135,7 +135,7 @@
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon24 {
+.vector-icon10 {
   height: 30.77%;
   width: 2.5%;
   top: 35.04%;
@@ -143,7 +143,7 @@
   bottom: 34.19%;
   left: 70.9%;
 }
-.header3 {
+.header4 {
   position: absolute;
   top: 0;
   left: 0;
@@ -163,7 +163,7 @@
   width: 518px;
   height: 93px;
 }
-.solarstar-bold-duotone3 {
+.solarstar-bold-duotone4 {
   position: absolute;
   top: 0;
   left: 0;
@@ -171,7 +171,7 @@
   height: 24px;
   overflow: hidden;
 }
-.solarstar-bold-duotone-wrapper1 {
+.solarstar-bold-duotone-wrapper2 {
   position: absolute;
   top: 1057px;
   left: 1833.01px;
@@ -196,7 +196,7 @@
   width: 1080px;
   height: 1317px;
 }
-.confira-seu-pedido6 {
+.confira-seu-pedido7 {
   position: absolute;
   top: 211px;
   left: 679px;
@@ -222,13 +222,14 @@
   left: 761px;
   font-size: var(--font-size-5xl);
 }
-.identifique-se3 {
+.identifique-se4 {
   position: absolute;
-  top: 307px;
+  top: 312px;
   left: 175px;
+  font-size: var(--font-size-9xl);
   color: var(--color-darkslategray-200);
 }
-.div18,
+.div22,
 .pagamento-conferir-inner {
   position: absolute;
   top: 315px;
@@ -240,7 +241,7 @@
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div18 {
+.div22 {
   font-size: 25.33px;
   font-weight: 600;
   text-align: center;
@@ -259,12 +260,12 @@
   width: 518px;
   height: 93px;
 }
-.forma-de-pagamento6 {
+.forma-de-pagamento8 {
   position: absolute;
   top: 443px;
   left: 175px;
 }
-.div19,
+.div23,
 .pagamento-conferir-child2 {
   position: absolute;
   top: 451px;
@@ -276,7 +277,7 @@
   border-radius: 50%;
   background-color: var(--color-white);
 }
-.div19 {
+.div23 {
   font-size: 25.33px;
   font-weight: 600;
   color: var(--color-darkorange);
@@ -314,13 +315,13 @@
   width: 234px;
   height: 48px;
 }
-.confira-seu-pedido7 {
+.confira-seu-pedido8 {
   position: absolute;
   top: 579px;
   left: 175px;
   color: var(--color-darkslategray-200);
 }
-.div20,
+.div24,
 .pagamento-conferir-child6 {
   position: absolute;
   top: 587px;
@@ -332,7 +333,7 @@
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div20 {
+.div24 {
   font-size: 25.33px;
   font-weight: 600;
   text-align: center;
@@ -340,7 +341,7 @@
   align-items: center;
   justify-content: center;
 }
-.group-child20 {
+.group-child25 {
   position: absolute;
   top: 0;
   left: 0;
@@ -351,24 +352,24 @@
   width: 518px;
   height: 93px;
 }
-.forma-de-pagamento7 {
+.forma-de-pagamento9 {
   position: absolute;
-  top: 20px;
+  top: 25px;
   left: 68px;
 }
-.div21,
-.group-child21 {
+.div25,
+.group-child26 {
   position: absolute;
   top: 28px;
   left: 14px;
   width: 38px;
   height: 38px;
 }
-.group-child21 {
+.group-child26 {
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div21 {
+.div25 {
   font-size: 25.33px;
   font-weight: 600;
   color: var(--color-white);
@@ -377,18 +378,19 @@
   align-items: center;
   justify-content: center;
 }
-.group-child22,
-.rectangle-parent11 {
+.group-child27,
+.rectangle-parent15 {
   position: absolute;
   width: 518px;
   height: 93px;
 }
-.rectangle-parent11 {
+.rectangle-parent15 {
   top: 423px;
   left: 107px;
+  font-size: var(--font-size-9xl);
   color: var(--color-darkslategray-200);
 }
-.group-child22 {
+.group-child27 {
   top: 0;
   left: 0;
   border-radius: var(--br-xl);
@@ -396,19 +398,19 @@
   box-shadow: 1.788395881652832px 1.788395881652832px 17.88px
     rgba(0, 0, 0, 0.25);
 }
-.div22,
-.group-child23 {
+.div26,
+.group-child28 {
   position: absolute;
   top: 28px;
   left: 14px;
   width: 38px;
   height: 38px;
 }
-.group-child23 {
+.group-child28 {
   border-radius: 50%;
   background-color: var(--color-white);
 }
-.div22 {
+.div26 {
   font-size: 25.33px;
   font-weight: 600;
   color: var(--color-darkorange);
@@ -417,96 +419,77 @@
   align-items: center;
   justify-content: center;
 }
-.pagamento-conferir-child7,
-.rectangle-parent12 {
+.rectangle-parent16 {
   position: absolute;
   top: 559px;
   left: 107px;
   width: 518px;
   height: 93px;
+  font-size: var(--font-size-9xl);
 }
 .pagamento-conferir-child7 {
+  position: absolute;
   top: 695px;
   left: 108px;
   border-radius: var(--br-xl);
   background-color: var(--color-white);
   box-shadow: 1.788395881652832px 1.788395881652832px 17.88px
     rgba(0, 0, 0, 0.25);
+  width: 518px;
+  height: 93px;
 }
-.status-do-pedido6 {
+.status-do-pedido7 {
   position: absolute;
-  top: 715px;
+  top: 720px;
   left: 176px;
+  font-size: var(--font-size-9xl);
   color: var(--color-darkslategray-200);
 }
-.div23,
 .pagamento-conferir-child8 {
   position: absolute;
   top: 723px;
   left: 122px;
+  border-radius: 50%;
+  background-color: var(--color-darkslategray-200);
   width: 38px;
   height: 38px;
 }
-.pagamento-conferir-child8 {
-  border-radius: 50%;
-  background-color: var(--color-darkslategray-200);
+.div27,
+.subtotal1 {
+  position: absolute;
+  display: flex;
+  align-items: center;
 }
-.div23 {
+.div27 {
+  top: 723px;
+  left: 122px;
   font-size: 25.33px;
   font-weight: 600;
   text-align: center;
-  display: flex;
-  align-items: center;
   justify-content: center;
+  width: 38px;
+  height: 38px;
 }
-.subtotal,
-.voc-retira-em {
-  position: absolute;
+.subtotal1 {
   top: 876px;
   left: 28px;
-}
-.voc-retira-em {
-  top: 0;
-  left: 116px;
-  font-size: var(--font-size-5xl);
-}
-.x-fil {
-  margin: 0;
-  font-weight: 600;
-}
-.feijo-preto {
-  margin-bottom: 0;
-}
-.feijo-preto-ao-ponto-poro-d {
-  margin: 0;
-  padding-left: 32px;
-  color: var(--color-gray-200);
-}
-.x-fil-container {
-  position: absolute;
-  top: 182px;
-  left: 56px;
-  font-size: inherit;
-  color: var(--color-dimgray-500);
-}
-.digite-aqui-as {
-  top: 669px;
-  left: 39px;
-  color: var(--color-gray-200);
+  width: 177px;
 }
 .adicionar-mais-itens,
 .digite-aqui-as,
 .idp-asa,
-.r-1990 {
+.voc-retira-em {
   position: absolute;
+  top: 0;
+  left: 116px;
   font-size: var(--font-size-5xl);
 }
-.r-1990 {
-  top: 182px;
-  left: 915px;
-  font-weight: 500;
-  color: var(--color-dimgray-500);
-  text-align: right;
+.adicionar-mais-itens,
+.digite-aqui-as,
+.idp-asa {
+  top: 669px;
+  left: 39px;
+  color: var(--color-gray-200);
 }
 .adicionar-mais-itens,
 .idp-asa {
@@ -524,78 +507,85 @@
   width: 1080px;
   height: 86px;
 }
-.r-149,
-.r-4990,
-.r-524 {
+.descontos1,
+.r-1491,
+.r-49901,
+.r-5241,
+.taxa-de-servio1 {
   position: absolute;
   top: 876px;
-  left: 929px;
-  text-align: right;
+  left: 933px;
+  display: flex;
+  align-items: center;
+  width: 235px;
 }
-.r-149,
-.r-524 {
+.descontos1,
+.r-1491,
+.r-5241,
+.taxa-de-servio1 {
   top: 919px;
-  left: 956px;
+  left: 959px;
+  width: 183px;
 }
-.r-524 {
+.descontos1,
+.r-5241,
+.taxa-de-servio1 {
   top: 962px;
-  left: 948px;
+  left: 949px;
+  width: 199px;
 }
-.descontos,
-.taxa-de-servio {
-  position: absolute;
+.descontos1,
+.taxa-de-servio1 {
   top: 919px;
   left: 28px;
+  width: 328px;
 }
-.descontos {
+.descontos1 {
   top: 962px;
+  width: 228px;
 }
-.r-4615,
-.total {
-  position: absolute;
+.r-46151 {
   top: 1014px;
+  left: 899px;
   font-size: var(--font-size-21xl);
   color: var(--color-black);
+  width: 303px;
 }
-.r-4615 {
-  left: 894px;
-  text-align: right;
-}
-.total {
-  left: 28px;
-}
-.digite-um-cupom {
+.digite-um-cupom1,
+.r-46151,
+.total1 {
   position: absolute;
+  display: flex;
+  align-items: center;
+}
+.total1 {
+  top: 1014px;
+  left: 28px;
+  font-size: var(--font-size-21xl);
+  color: var(--color-black);
+  width: 152px;
+}
+.digite-um-cupom1 {
   top: 762px;
   left: 93px;
   color: var(--color-darkorange);
-  display: flex;
-  align-items: center;
   width: 467px;
   height: 93px;
 }
-.group-child24 {
+.group-child29,
+.rectangle-parent17 {
+  position: absolute;
+  width: 507px;
+  height: 74px;
+}
+.group-child29 {
   top: 0;
   left: 0;
   border-radius: var(--br-3xs);
   border: 3px solid var(--color-darkslategray-400);
   box-sizing: border-box;
 }
-.group-child24,
-.rectangle-parent13,
-.voltar {
-  position: absolute;
-  width: 507px;
-  height: 74px;
-}
-.voltar {
-  top: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.rectangle-parent13 {
+.rectangle-parent17 {
   top: 1091px;
   left: 28px;
   cursor: pointer;
@@ -603,11 +593,11 @@
   color: var(--color-darkslategray-400);
 }
 .pagamento-conferir-inner1,
-.subtotal-parent {
+.subtotal-group {
   position: absolute;
   top: 0;
   left: 0;
-  width: 1080px;
+  width: 1202px;
   height: 1165px;
 }
 .pagamento-conferir-inner1 {
@@ -616,19 +606,27 @@
   font-size: 28.96px;
   color: var(--color-gray-400);
 }
-.group-child25,
-.rectangle-parent14 {
-  position: absolute;
-  width: 507px;
-  height: 74px;
-}
-.group-child25 {
+.group-child30 {
   top: 0;
   left: 0;
   border-radius: var(--br-3xs);
   background-color: var(--color-darkslategray-400);
 }
-.rectangle-parent14 {
+.fechar-pedido,
+.group-child30,
+.rectangle-parent18 {
+  position: absolute;
+  width: 507px;
+  height: 74px;
+}
+.fechar-pedido {
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rectangle-parent18 {
   top: 1505px;
   left: 1222px;
   cursor: pointer;
@@ -705,7 +703,7 @@
   top: 387px;
   left: 679px;
 }
-.group-icon {
+.pagamento-conferir-child16 {
   position: absolute;
   height: 9.29%;
   width: 1.51%;
@@ -717,7 +715,7 @@
   overflow: hidden;
   max-height: 100%;
 }
-.pagamento-conferir-child16 {
+.pagamento-conferir-child17 {
   position: absolute;
   top: 1176px;
   left: 1250px;
@@ -727,7 +725,7 @@
   width: 479px;
   height: 93px;
 }
-.resgatar-fidelidade {
+.resgatar-fidelidade1 {
   position: absolute;
   top: 1176px;
   left: 1266px;
@@ -740,9 +738,9 @@
   width: 463px;
   height: 93px;
 }
-.group-icon1,
-.vector-icon25,
-.vector-icon26 {
+.group-icon2,
+.vector-icon11,
+.vector-icon12 {
   position: absolute;
   height: 1.81%;
   width: 1.9%;
@@ -754,8 +752,8 @@
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon25,
-.vector-icon26 {
+.vector-icon11,
+.vector-icon12 {
   height: 2.08%;
   width: 1.35%;
   top: 15.97%;
@@ -763,7 +761,7 @@
   bottom: 81.96%;
   left: 36.77%;
 }
-.vector-icon26 {
+.vector-icon12 {
   height: 1.73%;
   width: 1.67%;
   top: 16.07%;
@@ -771,163 +769,196 @@
   bottom: 82.2%;
   left: 76.35%;
 }
-.pagamento-conferir-child17,
-.vector-icon27 {
+.pagamento-conferir-child18,
+.vector-icon13 {
   position: absolute;
   top: 396px;
   left: 686px;
   width: 110px;
   height: 110px;
 }
-.vector-icon27 {
+.vector-icon13 {
   height: 1.04%;
   width: 1.09%;
-  top: 29.91%;
-  right: 62.14%;
-  bottom: 69.06%;
-  left: 36.77%;
+  top: 51.85%;
+  right: 61.56%;
+  bottom: 47.11%;
+  left: 37.34%;
+  max-width: 100%;
+  overflow: hidden;
+  max-height: 100%;
+}
+.x-fil {
+  margin: 0;
+  font-weight: 600;
+}
+.feijo-preto {
+  margin-bottom: 0;
+}
+.feijo-preto-ao-ponto-poro-d {
+  margin: 0;
+  padding-left: 32px;
+  color: var(--color-gray-200);
+}
+.x-fil-container {
+  position: absolute;
+  top: 0;
+  left: 28px;
+  font-size: inherit;
+}
+.vector-icon14 {
+  position: absolute;
+  height: 7.55%;
+  width: 2.05%;
+  top: 3.24%;
+  right: 97.95%;
+  bottom: 89.21%;
+  left: 0;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
 }
 .x-salada {
   position: absolute;
-  top: 754px;
-  left: 737px;
-  font-size: var(--font-size-5xl);
+  top: 158px;
+  left: 31px;
   font-weight: 600;
-  color: var(--color-dimgray-500);
 }
-.pagamento-conferir-child18,
-.vector-icon28 {
+.vector-icon15 {
   position: absolute;
-  height: 1.04%;
-  width: 1.09%;
-  top: 37.72%;
-  right: 61.98%;
-  bottom: 61.25%;
-  left: 36.93%;
+  height: 7.55%;
+  width: 2.05%;
+  top: 60.07%;
+  right: 97.65%;
+  bottom: 32.37%;
+  left: 0.29%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
 }
-.pagamento-conferir-child18 {
-  height: 1.32%;
-  width: 1.4%;
-  top: 29.71%;
-  right: 9.9%;
-  bottom: 68.96%;
-  left: 88.7%;
-}
-.r-990 {
+.r-1990 {
   position: absolute;
-  top: 754px;
-  left: 1601px;
-  font-size: var(--font-size-5xl);
+  top: 0;
+  left: 0;
   font-weight: 500;
-  color: var(--color-dimgray-500);
-  text-align: right;
 }
-.pagamento-conferir-child19 {
+.group-child31 {
   position: absolute;
-  height: 1.32%;
-  width: 1.4%;
-  top: 37.52%;
-  right: 9.9%;
-  bottom: 61.15%;
-  left: 88.7%;
+  height: 74.41%;
+  width: 19.7%;
+  top: 14.19%;
+  right: -0.66%;
+  bottom: 11.41%;
+  left: 80.96%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
+}
+.r-1990-parent {
+  position: absolute;
+  top: 0;
+  left: 887px;
+  width: 136px;
+  height: 36px;
+  text-align: right;
 }
 .x-salada1 {
   position: absolute;
-  top: 796px;
-  left: 737px;
-  font-size: var(--font-size-5xl);
+  top: 200px;
+  left: 31px;
   font-weight: 600;
-  color: var(--color-dimgray-500);
 }
-.vector-icon29 {
+.vector-icon16 {
   position: absolute;
-  height: 1.04%;
-  width: 1.09%;
-  top: 39.79%;
-  right: 61.98%;
-  bottom: 59.17%;
-  left: 36.93%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-}
-.r-9901 {
-  position: absolute;
-  top: 796px;
-  left: 1601px;
-  font-size: var(--font-size-5xl);
-  font-weight: 500;
-  color: var(--color-dimgray-500);
-  text-align: right;
-}
-.pagamento-conferir-child20 {
-  position: absolute;
-  height: 1.32%;
-  width: 1.4%;
-  top: 39.6%;
-  right: 9.9%;
-  bottom: 59.08%;
-  left: 88.7%;
+  height: 7.55%;
+  width: 2.05%;
+  top: 75.18%;
+  right: 97.65%;
+  bottom: 17.27%;
+  left: 0.29%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
 }
 .x-salada2 {
   position: absolute;
-  top: 838px;
-  left: 737px;
-  font-size: var(--font-size-5xl);
+  top: 242px;
+  left: 31px;
   font-weight: 600;
-  color: var(--color-dimgray-500);
 }
-.vector-icon30,
-.vector-icon31 {
+.group-child32,
+.vector-icon17 {
   position: absolute;
-  height: 1.04%;
-  width: 1.09%;
-  top: 41.87%;
-  right: 61.98%;
-  bottom: 57.09%;
-  left: 36.93%;
+  height: 7.55%;
+  width: 2.05%;
+  top: 90.29%;
+  right: 97.65%;
+  bottom: 2.16%;
+  left: 0.29%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon31 {
-  top: 51.85%;
-  right: 61.56%;
-  bottom: 47.11%;
-  left: 37.34%;
+.group-child32 {
+  height: 22.32%;
+  width: 20.93%;
+  top: 4.26%;
+  right: -0.7%;
+  bottom: 73.42%;
+  left: 79.77%;
+}
+.r-9901 {
+  position: absolute;
+  top: 42px;
+  left: 0;
+  font-weight: 500;
+}
+.group-child33 {
+  position: absolute;
+  height: 22.32%;
+  width: 20.93%;
+  top: 39.26%;
+  right: -0.7%;
+  bottom: 38.42%;
+  left: 79.77%;
+  max-width: 100%;
+  overflow: hidden;
+  max-height: 100%;
 }
 .r-9902 {
   position: absolute;
-  top: 838px;
-  left: 1601px;
-  font-size: var(--font-size-5xl);
+  top: 84px;
+  left: 0;
   font-weight: 500;
-  color: var(--color-dimgray-500);
-  text-align: right;
 }
-.pagamento-conferir-child21 {
+.group-child34 {
   position: absolute;
-  height: 1.32%;
-  width: 1.4%;
-  top: 41.68%;
-  right: 9.9%;
-  bottom: 57%;
-  left: 88.7%;
+  height: 22.32%;
+  width: 20.93%;
+  top: 74.26%;
+  right: -0.7%;
+  bottom: 3.42%;
+  left: 79.77%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
+}
+.r-990-parent {
+  position: absolute;
+  top: 158px;
+  left: 895px;
+  width: 128px;
+  height: 120px;
+  text-align: right;
+}
+.x-fil-de-frango-feijo-pret-parent {
+  position: absolute;
+  top: 596px;
+  left: 706px;
+  width: 1023px;
+  height: 278px;
+  font-size: var(--font-size-5xl);
+  color: var(--color-dimgray-500);
 }
 .pagamento-conferir {
   position: relative;
