--- a/src/pages/PagamentoStatus.css
+++ b/src/pages/PagamentoStatus.css
@@ -33,7 +33,7 @@
   width: 256px;
   height: 256px;
 }
-.fluentbox-24-filled1,
+.fluentbox-24-filled2,
 .heroiconspencil-solid1,
 .material-symbolsstore1,
 .mdicalendar1 {
@@ -44,32 +44,32 @@
   height: 24px;
   overflow: hidden;
 }
-.fluentbox-24-filled1,
+.fluentbox-24-filled2,
 .material-symbolsstore1,
 .mdicalendar1 {
   left: 24px;
 }
-.fluentbox-24-filled1,
+.fluentbox-24-filled2,
 .mdicalendar1 {
   left: 0;
 }
-.fluentbox-24-filled1 {
+.fluentbox-24-filled2 {
   top: 660px;
   left: 44px;
 }
-.footer1,
-.group-child5 {
+.footer2,
+.group-child9 {
   position: absolute;
   top: 3875.33px;
   left: 0;
   width: 1920px;
   height: 369.33px;
 }
-.group-child5 {
+.group-child9 {
   top: 0;
   background-color: var(--color-darkorange);
 }
-.vecteezy-restaurant-logo-food-icon2 {
+.vecteezy-restaurant-logo-food-icon4 {
   position: absolute;
   height: 46.57%;
   width: 6.81%;
@@ -81,36 +81,37 @@
   overflow: hidden;
   max-height: 100%;
 }
-.fast-grill-1,
-.todos-os-direitos1 {
+.fast-grill-2,
+.todos-os-direitos2 {
   position: absolute;
   top: 242.67px;
   left: 789.33px;
 }
-.todos-os-direitos1 {
+.todos-os-direitos2 {
   top: 306.67px;
   font-size: 18.67px;
 }
-.header-inner,
-.rectangle-parent2 {
+.header-child2,
+.rectangle-parent6 {
   position: absolute;
   left: 0;
   width: 1920px;
 }
-.rectangle-parent2 {
+.rectangle-parent6 {
   top: 1654px;
   height: 369.33px;
   text-align: center;
   font-size: 42.67px;
+  color: var(--color-white);
 }
-.header-inner {
+.header-child2 {
   top: 0;
   background-color: var(--color-darkorange);
   box-shadow: 0 5.333333492279053px 66.67px 13.33px rgba(0, 0, 0, 0.2);
   height: 156px;
 }
-.cardpio1,
-.home1 {
+.cardpio2,
+.home3 {
   position: absolute;
   top: 48px;
   left: 904px;
@@ -118,31 +119,31 @@
   width: 126.67px;
   cursor: pointer;
 }
-.cardpio1 {
+.cardpio2 {
   left: 1089.33px;
   width: 213.33px;
 }
-.header-child1,
-.rea-do-cliente1 {
+.header-child3,
+.rea-do-cliente2 {
   position: absolute;
   top: 30.67px;
   left: 1468px;
   width: 414.67px;
   height: 93.33px;
 }
-.header-child1 {
+.header-child3 {
   border-radius: 66.67px;
   background-color: var(--color-white);
 }
-.rea-do-cliente1 {
+.rea-do-cliente2 {
   font-weight: 500;
   color: var(--color-gray);
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.vecteezy-restaurant-logo-food-icon3,
-.vector-icon8 {
+.vecteezy-restaurant-logo-food-icon5,
+.vector-icon4 {
   position: absolute;
   height: 69.23%;
   width: 4.44%;
@@ -154,7 +155,7 @@
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon8 {
+.vector-icon4 {
   height: 30.77%;
   width: 2.5%;
   top: 35.04%;
@@ -162,7 +163,7 @@
   bottom: 34.19%;
   left: 70.9%;
 }
-.header1 {
+.header2 {
   position: absolute;
   top: 0;
   left: 0;
@@ -170,6 +171,7 @@
   height: 156px;
   text-align: center;
   font-size: var(--font-size-21xl);
+  color: var(--color-white);
 }
 .pagamento-status-child {
   position: absolute;
@@ -182,7 +184,7 @@
   width: 518px;
   height: 93px;
 }
-.solarstar-bold-duotone1 {
+.solarstar-bold-duotone2 {
   position: absolute;
   top: 0;
   left: 0;
@@ -190,7 +192,7 @@
   height: 24px;
   overflow: hidden;
 }
-.solarstar-bold-duotone-container {
+.solarstar-bold-duotone-frame {
   position: absolute;
   top: 1057px;
   left: 1833.01px;
@@ -202,6 +204,7 @@
   position: absolute;
   top: 211px;
   left: 108px;
+  font-size: 35.33px;
   font-weight: 500;
   color: var(--color-black);
 }
@@ -216,10 +219,11 @@
   width: 1080px;
   height: 1120px;
 }
-.confira-seu-pedido2 {
+.confira-seu-pedido3 {
   position: absolute;
   top: 211px;
   left: 679px;
+  font-size: 35.33px;
   font-weight: 500;
   color: var(--color-black);
 }
@@ -230,7 +234,6 @@
   left: 706px;
   font-size: var(--font-size-13xl);
   font-weight: 600;
-  color: var(--color-darkslategray-600);
 }
 .status {
   top: 428px;
@@ -246,24 +249,14 @@
   color: var(--color-dimgray-400);
   text-align: center;
 }
-.aguardando2 {
-  margin: 0;
-}
-.aguardando-aprovao1 {
+.identifique-se2 {
   position: absolute;
-  top: 766px;
-  left: 780px;
-  font-size: var(--font-size-5xl);
-  color: var(--color-dimgray-400);
-  text-align: center;
-}
-.identifique-se1 {
-  position: absolute;
-  top: 307px;
+  top: 312px;
   left: 175px;
+  font-size: var(--font-size-9xl);
   color: var(--color-darkslategray-200);
 }
-.div6,
+.div10,
 .pagamento-status-inner {
   position: absolute;
   top: 315px;
@@ -275,9 +268,10 @@
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div6 {
+.div10 {
   font-size: 25.33px;
   font-weight: 600;
+  color: var(--color-white);
   text-align: center;
   display: flex;
   align-items: center;
@@ -294,12 +288,14 @@
   width: 518px;
   height: 93px;
 }
-.forma-de-pagamento2 {
+.forma-de-pagamento4 {
   position: absolute;
   top: 443px;
   left: 175px;
+  font-size: 35.33px;
+  color: var(--color-white);
 }
-.div7,
+.div11,
 .pagamento-status-child2 {
   position: absolute;
   top: 451px;
@@ -311,7 +307,7 @@
   border-radius: 50%;
   background-color: var(--color-white);
 }
-.div7 {
+.div11 {
   font-size: 25.33px;
   font-weight: 600;
   color: var(--color-darkorange);
@@ -331,13 +327,14 @@
   width: 518px;
   height: 93px;
 }
-.confira-seu-pedido3 {
+.confira-seu-pedido4 {
   position: absolute;
-  top: 579px;
+  top: 584px;
   left: 175px;
+  font-size: var(--font-size-9xl);
   color: var(--color-darkslategray-200);
 }
-.div8,
+.div12,
 .pagamento-status-child4 {
   position: absolute;
   top: 587px;
@@ -349,15 +346,16 @@
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div8 {
+.div12 {
   font-size: 25.33px;
   font-weight: 600;
+  color: var(--color-white);
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.group-child6 {
+.group-child10 {
   position: absolute;
   top: 0;
   left: 0;
@@ -368,24 +366,24 @@
   width: 518px;
   height: 93px;
 }
-.forma-de-pagamento3 {
+.forma-de-pagamento5 {
   position: absolute;
-  top: 20px;
+  top: 25px;
   left: 68px;
 }
-.div9,
-.group-child7 {
+.div13,
+.group-child11 {
   position: absolute;
   top: 28px;
   left: 14px;
   width: 38px;
   height: 38px;
 }
-.group-child7 {
+.group-child11 {
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div9 {
+.div13 {
   font-size: 25.33px;
   font-weight: 600;
   color: var(--color-white);
@@ -394,12 +392,13 @@
   align-items: center;
   justify-content: center;
 }
-.rectangle-parent3 {
+.rectangle-parent7 {
   position: absolute;
   top: 423px;
   left: 107px;
   width: 518px;
   height: 93px;
+  font-size: var(--font-size-9xl);
   color: var(--color-darkslategray-200);
 }
 .pagamento-status-child5 {
@@ -413,13 +412,14 @@
   width: 518px;
   height: 93px;
 }
-.status-do-pedido2 {
+.status-do-pedido3 {
   position: absolute;
   top: 715px;
   left: 176px;
+  font-size: 35.33px;
   color: var(--color-darkslategray-200);
 }
-.div10,
+.div14,
 .pagamento-status-child6 {
   position: absolute;
   top: 723px;
@@ -431,15 +431,16 @@
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div10 {
+.div14 {
   font-size: 25.33px;
   font-weight: 600;
+  color: var(--color-white);
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.group-child8 {
+.group-child12 {
   position: absolute;
   top: 0;
   left: 0;
@@ -450,19 +451,19 @@
   width: 518px;
   height: 93px;
 }
-.div11,
-.group-child9 {
+.div15,
+.group-child13 {
   position: absolute;
   top: 28px;
   left: 14px;
   width: 38px;
   height: 38px;
 }
-.group-child9 {
+.group-child13 {
   border-radius: 50%;
   background-color: var(--color-white);
 }
-.div11 {
+.div15 {
   font-size: 25.33px;
   font-weight: 600;
   color: var(--color-darkorange);
@@ -471,12 +472,14 @@
   align-items: center;
   justify-content: center;
 }
-.rectangle-parent4 {
+.rectangle-parent8 {
   position: absolute;
   top: 695px;
   left: 107px;
   width: 518px;
   height: 93px;
+  font-size: var(--font-size-9xl);
+  color: var(--color-white);
 }
 .pedido-3342562 {
   position: absolute;
@@ -495,7 +498,6 @@
   top: 324px;
   left: 1518px;
   text-align: right;
-  font-size: var(--font-size-5xl);
   color: var(--color-gray-400);
 }
 .pagamento-status-child7 {
@@ -506,19 +508,18 @@
   width: 1080px;
   height: 2px;
 }
-.cupons-de-desconto1,
 .programa-de-fidelidade1 {
   position: absolute;
   top: 892px;
   left: 705px;
   font-size: var(--font-size-13xl);
   font-weight: 600;
-  color: var(--color-darkslategray-600);
 }
 .cupons-de-desconto1 {
+  position: absolute;
   top: 980px;
   left: 770px;
-  font-size: var(--font-size-5xl);
+  font-weight: 600;
 }
 .ganhe-cupons-de-container1 {
   position: absolute;
@@ -541,7 +542,6 @@
   left: 705px;
   font-size: var(--font-size-13xl);
   font-weight: 600;
-  color: var(--color-darkslategray-600);
 }
 .pagamento-status-child9 {
   position: absolute;
@@ -551,29 +551,37 @@
   width: 1080px;
   height: 2px;
 }
-.b3,
-.pagamento-status-child10 {
+.aguardando2 {
+  margin: 0;
+}
+.aguardando-aprovao1 {
   position: absolute;
-  top: 699px;
-  left: 830px;
+  top: 121px;
+  left: 0;
+}
+.b3,
+.frame-child4 {
+  position: absolute;
+  top: 54px;
+  left: 50px;
   width: 54px;
   height: 54px;
 }
-.pagamento-status-child10 {
+.frame-child4 {
   border-radius: var(--br-8xs);
   background-color: var(--color-darkorange);
 }
 .b3 {
   font-size: var(--font-size-13xl);
   display: flex;
-  text-align: center;
+  color: var(--color-white);
   align-items: center;
   justify-content: center;
 }
-.pagamento-status-child11 {
+.frame-child5 {
   position: absolute;
-  top: 724px;
-  left: 904px;
+  top: 79px;
+  left: 124px;
   border-radius: var(--br-10xs-5);
   background-color: var(--color-darkorange);
   width: 268px;
@@ -582,34 +590,31 @@
 }
 .mask-group-icon1 {
   position: absolute;
-  height: 2.17%;
-  width: 1.88%;
-  top: 31.83%;
-  right: 54.43%;
-  bottom: 65.99%;
-  left: 43.7%;
+  height: 22.8%;
+  width: 4.11%;
+  top: -0.52%;
+  right: 89.16%;
+  bottom: 77.72%;
+  left: 6.74%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
 }
 .preparando-seu-pedido-container1 {
   position: absolute;
-  top: 766px;
-  left: 1122px;
-  font-size: var(--font-size-5xl);
-  color: var(--color-dimgray-400);
-  text-align: center;
+  top: 121px;
+  left: 0;
   opacity: 0.3;
 }
 .b4,
-.pagamento-status-child12 {
+.group-child14 {
   position: absolute;
-  top: 699px;
-  left: 1192px;
+  top: 54px;
+  left: 70px;
   width: 54px;
   height: 54px;
 }
-.pagamento-status-child12 {
+.group-child14 {
   border-radius: var(--br-8xs);
   background-color: var(--color-darkorange);
   opacity: 0.3;
@@ -617,24 +622,32 @@
 .b4 {
   font-size: var(--font-size-13xl);
   display: flex;
-  text-align: center;
+  color: var(--color-white);
   align-items: center;
   justify-content: center;
 }
-.vector-icon9 {
+.vector-icon5 {
   position: absolute;
-  height: 2.13%;
-  width: 1.98%;
-  top: 31.88%;
-  right: 35.57%;
-  bottom: 65.99%;
-  left: 62.45%;
+  height: 22.28%;
+  width: 19.79%;
+  top: 0;
+  right: 40.1%;
+  bottom: 77.72%;
+  left: 40.1%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
   opacity: 0.3;
 }
-.group-child10 {
+.preparando-seu-pedido-parent {
+  position: absolute;
+  top: 0;
+  left: 342px;
+  width: 192px;
+  height: 193px;
+  cursor: pointer;
+}
+.group-child15 {
   position: absolute;
   top: 79px;
   left: 0;
@@ -649,14 +662,14 @@
   left: 237px;
 }
 .b5,
-.group-child11 {
+.group-child16 {
   position: absolute;
   top: 54px;
   left: 287px;
   width: 54px;
   height: 54px;
 }
-.group-child11 {
+.group-child16 {
   border-radius: var(--br-8xs);
   background-color: var(--color-darkorange);
 }
@@ -667,7 +680,7 @@
   align-items: center;
   justify-content: center;
 }
-.vector-icon10 {
+.vector-icon6 {
   position: absolute;
   height: 21.76%;
   width: 10.77%;
@@ -679,45 +692,28 @@
   overflow: hidden;
   max-height: 100%;
 }
-.rectangle-parent5 {
+.rectangle-parent9 {
   position: absolute;
-  top: 645px;
-  left: 1266px;
+  top: 0;
+  left: 486px;
   width: 390px;
   height: 193px;
   opacity: 0.3;
+}
+.aguardando-aprovao-group {
+  position: absolute;
+  top: 645px;
+  left: 780px;
+  width: 876px;
+  height: 193px;
   text-align: center;
-  font-size: var(--font-size-5xl);
   color: var(--color-dimgray-400);
-}
-.pagamento-status-child13 {
-  position: absolute;
-  top: 988px;
-  left: 705px;
-  border-radius: 50%;
-  background-color: var(--color-darkslategray-700);
-  width: 49px;
-  height: 49px;
-}
-.vector-icon11 {
-  position: absolute;
-  height: 1.48%;
-  width: 1.56%;
-  top: 49.33%;
-  right: 61.25%;
-  bottom: 49.18%;
-  left: 37.19%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
 }
 .novos-pedidos1 {
   position: absolute;
   top: 1065px;
   left: 770px;
-  font-size: var(--font-size-5xl);
   font-weight: 600;
-  color: var(--color-darkslategray-600);
 }
 .acumule-pontos-e1 {
   position: absolute;
@@ -726,39 +722,14 @@
   font-size: var(--font-size-xl);
   color: var(--color-gray-300);
 }
-.pagamento-status-child14 {
-  position: absolute;
-  top: 1073px;
-  left: 705px;
-  border-radius: 50%;
-  background-color: var(--color-darkslategray-700);
-  width: 49px;
-  height: 49px;
-}
-.vector-icon12 {
-  position: absolute;
-  height: 1.48%;
-  width: 1.56%;
-  top: 53.53%;
-  right: 61.25%;
-  bottom: 44.98%;
-  left: 37.19%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-}
-.entre-em-contato1,
 .pedidos-acumulativos1 {
   position: absolute;
-  font-size: var(--font-size-5xl);
-  color: var(--color-darkslategray-600);
-}
-.pedidos-acumulativos1 {
   top: 1150px;
   left: 770px;
   font-weight: 600;
 }
 .entre-em-contato1 {
+  position: absolute;
   top: 1340px;
   left: 705px;
 }
@@ -769,54 +740,19 @@
   font-size: var(--font-size-xl);
   color: var(--color-gray-300);
 }
-.pagamento-status-child15,
-.pagamento-status-child16,
-.pagamento-status-child17 {
+.pagamento-status-child10 {
   position: absolute;
-  top: 1158px;
+  top: 988px;
   left: 705px;
-  border-radius: 50%;
-  background-color: var(--color-darkslategray-700);
   width: 49px;
-  height: 49px;
+  height: 219px;
 }
-.pagamento-status-child16,
-.pagamento-status-child17 {
+.pagamento-status-child11 {
+  position: absolute;
   top: 1336px;
   left: 1612px;
-}
-.pagamento-status-child17 {
-  left: 1680px;
-}
-.vector-icon13,
-.vector-icon14,
-.vector-icon15 {
-  position: absolute;
-  height: 1.48%;
-  width: 1.56%;
-  top: 57.74%;
-  right: 61.25%;
-  bottom: 40.78%;
-  left: 37.19%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-}
-.vector-icon14,
-.vector-icon15 {
-  height: 1.24%;
-  width: 1.3%;
-  top: 66.63%;
-  right: 14.11%;
-  bottom: 32.13%;
-  left: 84.58%;
-}
-.vector-icon15 {
-  height: 1.29%;
-  width: 1.35%;
-  top: 66.58%;
-  right: 10.52%;
-  left: 88.13%;
+  width: 117px;
+  height: 49px;
 }
 .pagamento-status {
   position: relative;
@@ -825,7 +761,7 @@
   height: 2023px;
   overflow: hidden;
   text-align: left;
-  font-size: 35.33px;
-  color: var(--color-white);
+  font-size: var(--font-size-5xl);
+  color: var(--color-darkslategray-600);
   font-family: var(--font-poppins);
 }
