--- a/src/pages/PagamentoStatus2.css
+++ b/src/pages/PagamentoStatus2.css
@@ -33,7 +33,7 @@
   width: 256px;
   height: 256px;
 }
-.fluentbox-24-filled2,
+.fluentbox-24-filled3,
 .heroiconspencil-solid2,
 .material-symbolsstore2,
 .mdicalendar2 {
@@ -44,32 +44,32 @@
   height: 24px;
   overflow: hidden;
 }
-.fluentbox-24-filled2,
+.fluentbox-24-filled3,
 .material-symbolsstore2,
 .mdicalendar2 {
   left: 24px;
 }
-.fluentbox-24-filled2,
+.fluentbox-24-filled3,
 .mdicalendar2 {
   left: 0;
 }
-.fluentbox-24-filled2 {
+.fluentbox-24-filled3 {
   top: 660px;
   left: 44px;
 }
-.footer2,
-.group-child12 {
+.footer3,
+.group-child17 {
   position: absolute;
   top: 3875.33px;
   left: 0;
   width: 1920px;
   height: 369.33px;
 }
-.group-child12 {
+.group-child17 {
   top: 0;
   background-color: var(--color-darkorange);
 }
-.vecteezy-restaurant-logo-food-icon4 {
+.vecteezy-restaurant-logo-food-icon6 {
   position: absolute;
   height: 46.57%;
   width: 6.81%;
@@ -81,36 +81,37 @@
   overflow: hidden;
   max-height: 100%;
 }
-.fast-grill-2,
-.todos-os-direitos2 {
+.fast-grill-3,
+.todos-os-direitos3 {
   position: absolute;
   top: 242.67px;
   left: 789.33px;
 }
-.todos-os-direitos2 {
+.todos-os-direitos3 {
   top: 306.67px;
   font-size: 18.67px;
 }
-.header-child2,
-.rectangle-parent6 {
+.header-child4,
+.rectangle-parent10 {
   position: absolute;
   left: 0;
   width: 1920px;
 }
-.rectangle-parent6 {
+.rectangle-parent10 {
   top: 1654px;
   height: 369.33px;
   text-align: center;
   font-size: 42.67px;
+  color: var(--color-white);
 }
-.header-child2 {
+.header-child4 {
   top: 0;
   background-color: var(--color-darkorange);
   box-shadow: 0 5.333333492279053px 66.67px 13.33px rgba(0, 0, 0, 0.2);
   height: 156px;
 }
-.cardpio2,
-.home2 {
+.cardpio3,
+.home4 {
   position: absolute;
   top: 48px;
   left: 904px;
@@ -118,31 +119,31 @@
   width: 126.67px;
   cursor: pointer;
 }
-.cardpio2 {
+.cardpio3 {
   left: 1089.33px;
   width: 213.33px;
 }
-.header-child3,
-.rea-do-cliente2 {
+.header-child5,
+.rea-do-cliente3 {
   position: absolute;
   top: 30.67px;
   left: 1468px;
   width: 414.67px;
   height: 93.33px;
 }
-.header-child3 {
+.header-child5 {
   border-radius: 66.67px;
   background-color: var(--color-white);
 }
-.rea-do-cliente2 {
+.rea-do-cliente3 {
   font-weight: 500;
   color: var(--color-gray);
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.vecteezy-restaurant-logo-food-icon5,
-.vector-icon16 {
+.vecteezy-restaurant-logo-food-icon7,
+.vector-icon7 {
   position: absolute;
   height: 69.23%;
   width: 4.44%;
@@ -154,7 +155,7 @@
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon16 {
+.vector-icon7 {
   height: 30.77%;
   width: 2.5%;
   top: 35.04%;
@@ -162,7 +163,7 @@
   bottom: 34.19%;
   left: 70.9%;
 }
-.header2 {
+.header3 {
   position: absolute;
   top: 0;
   left: 0;
@@ -170,6 +171,7 @@
   height: 156px;
   text-align: center;
   font-size: var(--font-size-21xl);
+  color: var(--color-white);
 }
 .pagamento-status2-child {
   position: absolute;
@@ -182,7 +184,7 @@
   width: 518px;
   height: 93px;
 }
-.solarstar-bold-duotone2 {
+.solarstar-bold-duotone3 {
   position: absolute;
   top: 0;
   left: 0;
@@ -190,7 +192,7 @@
   height: 24px;
   overflow: hidden;
 }
-.solarstar-bold-duotone-frame {
+.solarstar-bold-duotone-wrapper1 {
   position: absolute;
   top: 1057px;
   left: 1833.01px;
@@ -202,6 +204,7 @@
   position: absolute;
   top: 211px;
   left: 108px;
+  font-size: 35.33px;
   font-weight: 500;
   color: var(--color-black);
 }
@@ -216,10 +219,11 @@
   width: 1080px;
   height: 1120px;
 }
-.confira-seu-pedido4 {
+.confira-seu-pedido5 {
   position: absolute;
   top: 211px;
   left: 679px;
+  font-size: 35.33px;
   font-weight: 500;
   color: var(--color-black);
 }
@@ -230,7 +234,6 @@
   left: 706px;
   font-size: var(--font-size-13xl);
   font-weight: 600;
-  color: var(--color-darkslategray-600);
 }
 .previso-de-retirada1 {
   top: 428px;
@@ -245,24 +248,14 @@
   color: var(--color-dimgray-400);
   text-align: center;
 }
-.aguardando4 {
-  margin: 0;
-}
-.aguardando-aprovao2 {
+.identifique-se3 {
   position: absolute;
-  top: 766px;
-  left: 780px;
-  font-size: var(--font-size-5xl);
-  color: var(--color-dimgray-400);
-  text-align: center;
-}
-.identifique-se2 {
-  position: absolute;
-  top: 307px;
+  top: 312px;
   left: 175px;
+  font-size: var(--font-size-9xl);
   color: var(--color-darkslategray-200);
 }
-.div12,
+.div16,
 .pagamento-status2-inner {
   position: absolute;
   top: 315px;
@@ -274,9 +267,10 @@
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div12 {
+.div16 {
   font-size: 25.33px;
   font-weight: 600;
+  color: var(--color-white);
   text-align: center;
   display: flex;
   align-items: center;
@@ -293,12 +287,14 @@
   width: 518px;
   height: 93px;
 }
-.forma-de-pagamento4 {
+.forma-de-pagamento6 {
   position: absolute;
   top: 443px;
   left: 175px;
+  font-size: 35.33px;
+  color: var(--color-white);
 }
-.div13,
+.div17,
 .pagamento-status2-child2 {
   position: absolute;
   top: 451px;
@@ -310,7 +306,7 @@
   border-radius: 50%;
   background-color: var(--color-white);
 }
-.div13 {
+.div17 {
   font-size: 25.33px;
   font-weight: 600;
   color: var(--color-darkorange);
@@ -330,13 +326,14 @@
   width: 518px;
   height: 93px;
 }
-.confira-seu-pedido5 {
+.confira-seu-pedido6 {
   position: absolute;
-  top: 579px;
+  top: 584px;
   left: 175px;
+  font-size: var(--font-size-9xl);
   color: var(--color-darkslategray-200);
 }
-.div14,
+.div18,
 .pagamento-status2-child4 {
   position: absolute;
   top: 587px;
@@ -348,15 +345,16 @@
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div14 {
+.div18 {
   font-size: 25.33px;
   font-weight: 600;
+  color: var(--color-white);
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.group-child13 {
+.group-child18 {
   position: absolute;
   top: 0;
   left: 0;
@@ -367,24 +365,24 @@
   width: 518px;
   height: 93px;
 }
-.forma-de-pagamento5 {
+.forma-de-pagamento7 {
   position: absolute;
-  top: 20px;
+  top: 25px;
   left: 68px;
 }
-.div15,
-.group-child14 {
+.div19,
+.group-child19 {
   position: absolute;
   top: 28px;
   left: 14px;
   width: 38px;
   height: 38px;
 }
-.group-child14 {
+.group-child19 {
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div15 {
+.div19 {
   font-size: 25.33px;
   font-weight: 600;
   color: var(--color-white);
@@ -393,12 +391,13 @@
   align-items: center;
   justify-content: center;
 }
-.rectangle-parent7 {
+.rectangle-parent11 {
   position: absolute;
   top: 423px;
   left: 107px;
   width: 518px;
   height: 93px;
+  font-size: var(--font-size-9xl);
   color: var(--color-darkslategray-200);
 }
 .pagamento-status2-child5 {
@@ -412,13 +411,14 @@
   width: 518px;
   height: 93px;
 }
-.status-do-pedido4 {
+.status-do-pedido5 {
   position: absolute;
   top: 715px;
   left: 176px;
+  font-size: 35.33px;
   color: var(--color-darkslategray-200);
 }
-.div16,
+.div20,
 .pagamento-status2-child6 {
   position: absolute;
   top: 723px;
@@ -430,15 +430,16 @@
   border-radius: 50%;
   background-color: var(--color-darkslategray-200);
 }
-.div16 {
+.div20 {
   font-size: 25.33px;
   font-weight: 600;
+  color: var(--color-white);
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.group-child15 {
+.group-child20 {
   position: absolute;
   top: 0;
   left: 0;
@@ -449,19 +450,19 @@
   width: 518px;
   height: 93px;
 }
-.div17,
-.group-child16 {
+.div21,
+.group-child21 {
   position: absolute;
   top: 28px;
   left: 14px;
   width: 38px;
   height: 38px;
 }
-.group-child16 {
+.group-child21 {
   border-radius: 50%;
   background-color: var(--color-white);
 }
-.div17 {
+.div21 {
   font-size: 25.33px;
   font-weight: 600;
   color: var(--color-darkorange);
@@ -470,12 +471,14 @@
   align-items: center;
   justify-content: center;
 }
-.rectangle-parent8 {
+.rectangle-parent12 {
   position: absolute;
   top: 695px;
   left: 107px;
   width: 518px;
   height: 93px;
+  font-size: var(--font-size-9xl);
+  color: var(--color-white);
 }
 .o-horrio-acima,
 .pedido-33425621 {
@@ -499,7 +502,6 @@
   top: 324px;
   left: 827px;
   text-align: right;
-  font-size: var(--font-size-5xl);
   color: var(--color-gray-400);
 }
 .pagamento-status2-child7 {
@@ -510,19 +512,18 @@
   width: 1080px;
   height: 2px;
 }
-.cupons-de-desconto2,
 .programa-de-fidelidade2 {
   position: absolute;
   top: 892px;
   left: 705px;
   font-size: var(--font-size-13xl);
   font-weight: 600;
-  color: var(--color-darkslategray-600);
 }
 .cupons-de-desconto2 {
+  position: absolute;
   top: 980px;
   left: 770px;
-  font-size: var(--font-size-5xl);
+  font-weight: 600;
 }
 .ganhe-cupons-de-container2 {
   position: absolute;
@@ -545,7 +546,6 @@
   left: 705px;
   font-size: var(--font-size-13xl);
   font-weight: 600;
-  color: var(--color-darkslategray-600);
 }
 .pagamento-status2-child9 {
   position: absolute;
@@ -555,29 +555,37 @@
   width: 1080px;
   height: 2px;
 }
-.b6,
-.pagamento-status2-child10 {
+.aguardando4 {
+  margin: 0;
+}
+.aguardando-aprovao2 {
   position: absolute;
-  top: 699px;
-  left: 830px;
+  top: 121px;
+  left: 0;
+}
+.b6,
+.frame-child6 {
+  position: absolute;
+  top: 54px;
+  left: 50px;
   width: 54px;
   height: 54px;
 }
-.pagamento-status2-child10 {
+.frame-child6 {
   border-radius: var(--br-8xs);
   background-color: var(--color-darkorange);
 }
 .b6 {
   font-size: var(--font-size-13xl);
   display: flex;
-  text-align: center;
+  color: var(--color-white);
   align-items: center;
   justify-content: center;
 }
-.pagamento-status2-child11 {
+.frame-child7 {
   position: absolute;
-  top: 724px;
-  left: 904px;
+  top: 79px;
+  left: 124px;
   border-radius: var(--br-10xs-5);
   background-color: var(--color-darkorange);
   width: 268px;
@@ -585,56 +593,53 @@
 }
 .mask-group-icon2 {
   position: absolute;
-  height: 2.17%;
-  width: 1.88%;
-  top: 31.83%;
-  right: 54.43%;
-  bottom: 65.99%;
-  left: 43.7%;
+  height: 22.8%;
+  width: 4.11%;
+  top: -0.52%;
+  right: 89.16%;
+  bottom: 77.72%;
+  left: 6.74%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
 }
 .preparando-seu-pedido-container2 {
   position: absolute;
-  top: 766px;
-  left: 1122px;
-  font-size: var(--font-size-5xl);
-  color: var(--color-dimgray-400);
-  text-align: center;
+  top: 121px;
+  left: 342px;
 }
 .b7,
-.pagamento-status2-child12 {
+.frame-child8 {
   position: absolute;
-  top: 699px;
-  left: 1192px;
+  top: 54px;
+  left: 412px;
   width: 54px;
   height: 54px;
 }
-.pagamento-status2-child12 {
+.frame-child8 {
   border-radius: var(--br-8xs);
   background-color: var(--color-darkorange);
 }
 .b7 {
   font-size: var(--font-size-13xl);
   display: flex;
-  text-align: center;
+  color: var(--color-white);
   align-items: center;
   justify-content: center;
 }
-.vector-icon17 {
+.vector-icon8 {
   position: absolute;
-  height: 2.13%;
-  width: 1.98%;
-  top: 31.88%;
-  right: 35.57%;
-  bottom: 65.99%;
-  left: 62.45%;
+  height: 22.28%;
+  width: 4.34%;
+  top: 0;
+  right: 47.83%;
+  bottom: 77.72%;
+  left: 47.83%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
 }
-.group-child17 {
+.group-child22 {
   position: absolute;
   top: 79px;
   left: 0;
@@ -643,81 +648,48 @@
   width: 268px;
   height: 5px;
 }
-.aguardando-retirada2 {
-  position: absolute;
-  top: 121px;
-  left: 237px;
-}
-.b8,
-.group-child18 {
-  position: absolute;
-  top: 54px;
-  left: 287px;
-  width: 54px;
-  height: 54px;
-}
-.group-child18 {
-  border-radius: var(--br-8xs);
-  background-color: var(--color-darkorange);
-}
-.b8 {
-  font-size: var(--font-size-13xl);
-  display: flex;
-  color: var(--color-white);
-  align-items: center;
-  justify-content: center;
-}
-.vector-icon18 {
+.vector-icon9 {
   position: absolute;
   height: 21.76%;
-  width: 10.77%;
+  width: 27.45%;
   top: 0;
-  right: 14.1%;
+  right: 35.95%;
   bottom: 78.24%;
-  left: 75.13%;
+  left: 36.6%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
 }
-.rectangle-parent9 {
+.aguardando-retirada-parent {
   position: absolute;
-  top: 645px;
-  left: 1266px;
+  top: 0;
+  left: 237px;
+  width: 153px;
+  height: 193px;
+  cursor: pointer;
+}
+.rectangle-parent13 {
+  position: absolute;
+  top: 0;
+  left: 486px;
   width: 390px;
   height: 193px;
   opacity: 0.3;
+}
+.aguardando-aprovao-container {
+  position: absolute;
+  top: 645px;
+  left: 780px;
+  width: 876px;
+  height: 193px;
   text-align: center;
-  font-size: var(--font-size-5xl);
   color: var(--color-dimgray-400);
-}
-.pagamento-status2-child13 {
-  position: absolute;
-  top: 988px;
-  left: 705px;
-  border-radius: 50%;
-  background-color: var(--color-darkslategray-700);
-  width: 49px;
-  height: 49px;
-}
-.vector-icon19 {
-  position: absolute;
-  height: 1.48%;
-  width: 1.56%;
-  top: 49.33%;
-  right: 61.25%;
-  bottom: 49.18%;
-  left: 37.19%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
 }
 .novos-pedidos2 {
   position: absolute;
   top: 1065px;
   left: 770px;
-  font-size: var(--font-size-5xl);
   font-weight: 600;
-  color: var(--color-darkslategray-600);
 }
 .acumule-pontos-e2 {
   position: absolute;
@@ -726,39 +698,14 @@
   font-size: var(--font-size-xl);
   color: var(--color-gray-300);
 }
-.pagamento-status2-child14 {
-  position: absolute;
-  top: 1073px;
-  left: 705px;
-  border-radius: 50%;
-  background-color: var(--color-darkslategray-700);
-  width: 49px;
-  height: 49px;
-}
-.vector-icon20 {
-  position: absolute;
-  height: 1.48%;
-  width: 1.56%;
-  top: 53.53%;
-  right: 61.25%;
-  bottom: 44.98%;
-  left: 37.19%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-}
-.entre-em-contato2,
 .pedidos-acumulativos2 {
   position: absolute;
-  font-size: var(--font-size-5xl);
-  color: var(--color-darkslategray-600);
-}
-.pedidos-acumulativos2 {
   top: 1150px;
   left: 770px;
   font-weight: 600;
 }
 .entre-em-contato2 {
+  position: absolute;
   top: 1340px;
   left: 705px;
 }
@@ -769,54 +716,19 @@
   font-size: var(--font-size-xl);
   color: var(--color-gray-300);
 }
-.pagamento-status2-child15,
-.pagamento-status2-child16,
-.pagamento-status2-child17 {
+.pagamento-status2-child10 {
   position: absolute;
-  top: 1158px;
+  top: 988px;
   left: 705px;
-  border-radius: 50%;
-  background-color: var(--color-darkslategray-700);
   width: 49px;
-  height: 49px;
+  height: 219px;
 }
-.pagamento-status2-child16,
-.pagamento-status2-child17 {
+.pagamento-status2-child11 {
+  position: absolute;
   top: 1336px;
   left: 1612px;
-}
-.pagamento-status2-child17 {
-  left: 1680px;
-}
-.vector-icon21,
-.vector-icon22,
-.vector-icon23 {
-  position: absolute;
-  height: 1.48%;
-  width: 1.56%;
-  top: 57.74%;
-  right: 61.25%;
-  bottom: 40.78%;
-  left: 37.19%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-}
-.vector-icon22,
-.vector-icon23 {
-  height: 1.24%;
-  width: 1.3%;
-  top: 66.63%;
-  right: 14.11%;
-  bottom: 32.13%;
-  left: 84.58%;
-}
-.vector-icon23 {
-  height: 1.29%;
-  width: 1.35%;
-  top: 66.58%;
-  right: 10.52%;
-  left: 88.13%;
+  width: 117px;
+  height: 49px;
 }
 .pagamento-status2 {
   position: relative;
@@ -825,7 +737,7 @@
   height: 2023px;
   overflow: hidden;
   text-align: left;
-  font-size: 35.33px;
-  color: var(--color-white);
+  font-size: var(--font-size-5xl);
+  color: var(--color-darkslategray-600);
   font-family: var(--font-poppins);
 }
